k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: advent-2023-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: advent-2023
  template:
    metadata:
      labels:
        app: advent-2023
    spec:
      containers:
        - name: advent-2023-container
          image: ssouthcity/advent-event-2023:latest
          ports:
            - containerPort: 80
