k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: advent-2023-service
spec:
  selector:
    app: advent-2023
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
