k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: advent-2023
  annotations:
    kubernetes.io/ingress.global-static-ip-name: advent-2023-ip
    networking.gke.io/managed-certificates: advent-2023-cert
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/v1beta1.FrontendConfig: "http-to-https"
  labels:
    app: advent-2023
spec:
  defaultBackend:
    service:
      name: advent-2023-service
      port:
        number: 8080
